--- a/Código/styles.css
+++ b/Código/styles.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background-image: url(fundo.jpg);
+    background-image: url(/Trab-Economia/Utilizáveis/fundo.jpg);
     background-size: cover;
 }
 
