--- a/Código/styles.css
+++ b/Código/styles.css
@@ -2,8 +2,8 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+body{
+    background: f2f2f2;
 }
 
 .Conteudo_primario_Titulo {
@@ -91,6 +91,9 @@ a:hover {
 .Logo {
     height: 40px;
     margin: 10px 20px;
+    margin-left: 3rem;
+    margin-right: 6rem;
+    padding-left: 3rem;
 }
 
 .Navbar {
@@ -172,3 +175,21 @@ a:hover {
         margin-right: 6rem;
     }
 }
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Isso centralizará verticalmente em relação à altura da janela */
+  }
+
+  .button{
+    padding: 1rem;
+    border: none;
+    border-radius: 8px;
+  }
+
+  .button:hover{
+    background-color: #333;
+    color: white;
+  }
